--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "@types/node": "^16.4.10",
-    "tsc": "^2.0.3"
+    "@types/node": "^16.4.10"
   }
 }
